# mamacore

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/wechat-analytics/: SKILL.md
.claude/skills/wechat-article/: SKILL.md
.claude/skills/wechat-image/: SKILL.md
examples/: article-checklist.md  article-pain.md
services/dailyhot/: .gitignore  README.md  SKILL.md  package-lock.json  package.json  server.js  start.sh
services/dailyhot/scripts/: query-hot.mjs  start-server.mjs
services/dailyhot/tests/: __init__.py  test_adapter.py  test_cli.py  test_mcp.py  test_orch.py  test_sensitive.py  test_title.py
src/mamacore/: __init__.py  cli.py  server.py
src/mamacore/adapter/: __init__.py  converter.py  seo.py  theme.py  wechat_format.py
src/mamacore/analytics/: __init__.py  audience_profile.py  competitor.py  content_calendar.py  metrics.py  models.py  monetization.py  recommender.py  scraper.py  title_ab.py  topic_analysis.py  viral_patterns.py
src/mamacore/config/: image_config.yaml  platform_rules.yaml  style.yaml
src/mamacore/hot_topics/: __init__.py  dailyhot_service.py  gzh_api.py  models.py
src/mamacore/image/: __init__.py  cover.py  generator.py  image_gen.py  inline.py  provider.py  share_card.py
tests/: test_adapter.py  test_analytics_models.py  test_cli.py  test_hot_topics_models.py  test_integration.py  test_llm_client.py  test_mcp_server.py  test_orchestrator.py  test_sensitive_words.py  test_title.py
(+38 files in other folders)
