[project]
name = "mamacore"
version = "0.1.0"
description = "公众号全流程自动化 MCP Server —— Harness + Model = Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["wechat", "公众号", "mcp", "ai-agent", "content-generation", "自媒体"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyahocorasick>=1.4.7",
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
mama = "mamacore.cli:main"
mama-server = "mamacore.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
